--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,26 +6,29 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/poppins": "^5.1.0",
-    "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.22.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@toolpad/core": "^0.9.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
     "formic": "^0.0.10",
     "formik": "^2.4.6",
+    "mdb-react-ui-kit": "^9.0.0",
+    "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "recharts": "^2.13.3",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
