--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 PORT=5001
 DB_URI=mongodb+srv://tinverona05:AkWRePRd4YlNVLch@cluster0.hmofm.mongodb.net/PieceOfTimePH?retryWrites=true&w=majority&appName=Cluster0
+
+
+JWT_SECRET=ily3000 #kahit ano jwt_secret
+JWT_EXPIRES_TIME=14d
