--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/poppins": "^5.1.0",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.22.2",
@@ -18,6 +19,7 @@
     "formic": "^0.0.10",
     "formik": "^2.4.6",
     "mdb-react-ui-kit": "^9.0.0",
+    "mdbreact": "^5.2.0",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
