--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
