admin order crud email

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,8 @@ DB_URI=mongodb+srv://tinverona05:AkWRePRd4YlNVLch@cluster0.hmofm.mongodb.net/Pie
 
 JWT_SECRET=ily3000 #kahit ano jwt_secret
 JWT_EXPIRES_TIME=14d
+
+
+
+MAILTRAP_USER=f1fa24516e6ad1
+MAILTRAP_PASS=0efdfde8a9358e
